# fde_fedex

./: .gitignore  README.md  Week 1 Assessment.docx  Week 2 Assessment.docx  Week 2 Notes.docx
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/: .env.example  AGENTS.md  README.md  backoutPlan.md  copilot-instructions.md  pyproject.toml  user-stories.md
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/.github/skills/: rapid-peer-review.md
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/docs/: go-no-go-checklist.md
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/mock_data/: CHANGELOG.md  ci_results.json  cve_database.json  release_requests.json  requirements_label_service.txt  requirements_notification_service.txt  requirements_shipping_api.txt  requirements_tracking_service.txt  tickets.json
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/openspec/: pipeline-architecture.md
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/pipeline/: __init__.py  changelog_reader.py  dependency_scanner.py  deploy.py  runner.py  ticket_client.py
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/solutions/: agent.py  models.py
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/solutions/data/: loader.py
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/solutions/pipeline/: dependency_scanner.py  ticket_client.py
WA3897-CAP-1-0-0-Student-WA3897-CAP/LabFiles/track-b-release-agent/solutions/tests/: test_agent.py  (+3 more)
(+269 files in other folders)
